# llm-zoomcamp-2025-daudjan

./: First_Notebook.ipynb  Makefile  README.md  main.py  pyproject.toml  requirements.txt
01-intro-rag/: README.md  load_faq_data.py  tfidf_search.ipynb
02-vector-search/: README.md
03-evaluation/: README.md
04-monitoring/: README.md
05-best-practices/: README.md
06-end-to-end-project/: README.md
