[project]
name = "llm-zoomcamp-2025-daudjan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.1.1",
    "notebook==7.1.2",
    "openai>=1.109.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
